# DrivelessCar-Final-Round

./: CMakeLists.txt  auto.cpp  auto2.cpp  auto3.cpp  cam.cpp  carconf.txt  debugLane.cpp  depth.cpp  greconf.txt  laneconf.txt  mpu.cpp  mpu.h  objconf.txt  rm.sh  seconf.txt  t.cpp  t.h  traconf.txt
HAL/: Makefile  cmake_install.cmake
HAL/traffic/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  svmdetector.cpp  svmdetector.h  svmprocessor.cpph
HAL/traffic/Untitled Folder/: svmdetector.cpp  svmdetector.h
detector/: CMakeLists.txt  detectorobj.cpp  detectorobj.h  detectorobj1.cpp
haar/: haar.h
haar/models/: l2.xml  l3.xml  left_ver2.xml  stop.xml  stop3.svm  stop_ver11.xml  stop_ver4.xml  stop_ver6.xml  stop_ver7.xml  stop_ver8.xml
haar2/: CMakeLists.txt  CMakeLists.txt~  haar.cpp  haar.h~  main.cpp
haar2/models/: l1.xml  left2.xml  main.cpp  mi.xml  right2.xml  stop_f.xml  stop_ver10.xml  stop_ver9.xml
lane/: CMakeLists.txt  LaneDetection.cbp  Makefile  cmake_install.cmake  debug.cpp  debug.h  frameprocess.cpp  frameprocess.h  green.cpp  green.h  secret.cpp  secret.h  status.cpp  status.h
lane/fuzzy/: CMakeLists.txt  Makefile  cmake_install.cmake  config.cbp  fuzzylogic.cpp  fuzzylogic.h  testfuzz.cpp
lane/green_lane/: CMakeLists.txt  GreenLaneDetection.cbp  Makefile  cmake_install.cmake  greenimageprocess.cpp  greenimageprocess.h  greenlaneprocess.cpp  greenlaneprocess.h
lane/laneclass/: CMakeLists.txt  LaneClass.cbp  Makefile  cmake_install.cmake  lane.cpp  lane.h  layer.cpp  layer.h  line.cpp  line.h  road.cpp  road.h  roadmultilanes.cpp  roadmultilanes.h
lane/normal_lane/: CMakeLists.txt  Makefile  NormalLaneDetection.cbp  cmake_install.cmake  laneimageprocess.cpp  laneimageprocess.h  laneprocess.cpp  laneprocess.h  lineprocess.cpp  lineprocess.h  pointsprocess.cpp  pointsprocess.h
lane/secret_lane/: CMakeLists.txt  Makefile  SecretLaneDetection.cbp  cmake_install.cmake  secretlaneprocess.cpp  secretlaneprocess.h
main/: automaticCar.cpp  canny.cpp  detector.cpp  equation.cpp  fit.h  lane.cpp  t.cpp  testcannybinh.cpp  testnamesapceapi.cpp  testnamesapceapi.h  traffic.cpp
openni2/: Makefile  cmake_install.cmake
peripheral_driver/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
peripheral_driver/i2c/: CMakeCache.txt  CMakeLists.txt  Makefile  api_i2c_pwm.cpp  api_i2c_pwm.h  api_i2c_pwm.h~  cmake_install.cmake
peripheral_driver/uart/: Makefile  cmake_install.cmake
simd/docs/: 2013.html  2014.html  2015.html  2016.html  2017.html  2018.html  index.html
simd/docs/help/: group__matrix.html
simd/prj/cmake/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
simd/prj/sh/: GetVersion.sh
simd/prj/txt/: DoxygenConfig.txt  DoxygenData.txt  DoxygenFooter.txt  DoxygenHeader.txt
simd/prj/vs2012/: Alg.vcxproj  Prop.props  Simd.sln
simd/prj/vs2013/: Prop.props  Simd.sln
simd/prj/vs2015/: Alg.vcxproj  Ocv.props.default  Simd.sln  Test.vcxproj  Use.vcxproj
simd/prj/vs2017a/: Alg.vcxproj  Prop.props  Simd.sln  Simd.vcxproj  Test.vcxproj
simd/prj/vs2017w/: Prop.props  Simd.sln  Simd.vcxproj
simd/src/Simd/: SimdArray.h  SimdAvx1Float32.cpp  SimdAvx1Gemm32f.cpp  SimdAvx1HogLite.cpp  SimdAvx1Neural.cpp  SimdAvx1Synet.cpp  SimdAvx2Deinterleave.cpp  SimdAvx2Detection.cpp  SimdAvx2Float16.cpp  SimdAvx2Float32.cpp  SimdAvx2Gemm32f.cpp  SimdAvx2HogLite.cpp  SimdAvx2Int16ToGray.cpp  SimdAvx2Integral.cpp  SimdAvx2Interleave.cpp  SimdAvx2Laplace.cpp  SimdAvx2MeanFilter3x3.cpp  SimdAvx2Neural.cpp  SimdAvx2Synet.cpp  SimdAvx512bw.h  SimdAvx512bwAbsDifferenceSum.cpp  SimdAvx512bwAbsGradientSaturatedSum.cpp  SimdAvx512bwAddFeatureDifference.cpp  SimdAvx512bwAlphaBlending.cpp  SimdAvx512bwBackground.cpp  SimdAvx512bwBgrToBayer.cpp  SimdAvx512bwBgrToBgra.cpp  SimdAvx512bwBgrToGray.cpp  SimdAvx512bwBgrToYuv.cpp  SimdAvx512bwBgraToBayer.cpp  SimdAvx512bwBgraToBgr.cpp  SimdAvx512bwBgraToGray.cpp  SimdAvx512bwBgraToYuv.cpp  SimdAvx512bwBinarization.cpp  SimdAvx512bwConditional.cpp  SimdAvx512bwDeinterleave.cpp  SimdAvx512bwDetection.cpp  SimdAvx512bwEdgeBackground.cpp  SimdAvx512bwFill.cpp  SimdAvx512bwFloat16.cpp  (+199 more)
simd/src/Test/: TestContour.cpp  TestDetection.cpp  TestFloat16.cpp  TestFloat32.cpp  TestFont.cpp  TestGemm.cpp  TestHogLite.cpp  TestHtml.cpp  TestHtml.h  TestImageMatcher.cpp  TestInterleave.cpp  TestLog.cpp  TestLog.h  TestMotion.cpp  TestNeural.cpp  TestSvm.cpp  TestSynet.cpp  TestTable.cpp  TestTable.h  TestVideo.cpp  TestVideo.h
simd/src/Use/: Use.cpp  UseFaceDetection.cpp  UseMotionDetector.cpp
stereo_vision/: CMakeLists.txt~  Makefile  api_kinect_cv.cpp  cmake_install.cmake
